# lillelms

./: .gitattributes  .gitignore  .nbstripout  AGENTS.md  README.md  id.md  j0-tentative-template.md  j1-intro.md  j2-foundations.md  j3-analyse.md  j4-analyse.md  j5-outro.md  j5.md  pyproject.toml
data/: README.md
data/airbnb/: airbnb_listings.csv  codebook.md  fetch_airbnb.py
data/critiques_films/: codebook.md  critiques_films_test.csv  critiques_films_train.csv  fetch_critiques.py
data/ina_zfe/: codebook.md  ina_zfe.csv
data/law_school/: codebook.md  fetch_law_school.py  law_school_for_classification.csv  law_school_for_classification_test.csv  law_school_for_classification_train.csv  law_school_for_regression.csv  law_school_for_regression_test.csv  law_school_for_regression_train.csv  predict_classification.py
data/law_school/output/: README.md  predictions_classification_test.csv  predictions_classification_train.csv
meeting-notes/: 2026-04-24.md
participants/: analyse_des_participants.md  analyze_participants.py
resources/j1/2_aprem/: 01-introduction-python.ipynb
resources/j1/aprem/: 02-types-et-structures.ipynb
resources/j2/1_matin/: 01-perspective-historique.ipynb  01-perspective-historique_BACKUP_82293.ipynb  01-perspective-historique_REMOTE_82293.ipynb  02-ml-foundations.ipynb
resources/j2/2_aprem/: 01-api-hour.ipynb  01-l-api-hour.ipynb  02-prompt-engineering.ipynb  02-to-prompt-or-not.ipynb
resources/j3/1_matin/: 01-text-mining-concepts.ipynb  02-text-mining-applications.ipynb
resources/j3/2_aprem/: 01-audio-analysis.ipynb  02-image-analysis.ipynb
resources/j4/2_aprem/: 01-fairness.ipynb  03-generer-explications.ipynb
resources/j5/: j5-outro.md
resources/j5/1_matin/: J5_slides.html
resources/j5/2_aprem/: 01-comparaison-modeles.ipynb  01-fine-tuning.ipynb  J5_slides.qmd  ollama_humanum.ipynb  ollama_serve_local.ipynb
ressources/j1/aprem/: 01-introduction-python.ipynb  02-types-et-structures.ipynb  03-pandas-crash-course.ipynb
ressources/j2/: j2-foundations.md
ressources/j2/1_matin/: 01-perspective-historique.ipynb  02-ml-foundations.ipynb  contenu.md  plan.md
ressources/j2/2_aprem/: 01-l-api-hour.ipynb  02-a-la-recherche-du-prompt-perdu.ipynb  02-to-prompt-or-not.ipynb  XX-api-prompts.ipynb  j2-api-prompts.ipynb
ressources/j3/: j3-analyse.md
ressources/j3/1_matin/: 01-text-mining-concepts.ipynb  02-text-mining-applications.ipynb  plan.md
ressources/j4/: j4-analyse.md
(+16 files in other folders)
