[project]
name = "lillelms"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "beautifulsoup4>=4.15.0",
    "bertopic>=0.17.4",
    "gensim>=4.4.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "openai>=2.40.0",
    "openai-whisper",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "wikipedia-api>=0.15.0",
    "wordcloud>=1.9.6",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6",
    "nbstripout>=0.7",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
